fix flicker

--- a/index.css
+++ b/index.css
@@ -1,17 +1,17 @@
 * {
-  position: relative;
-  box-sizing: border-box;
-  margin: 0;
+  animation-play-state: paused !important;
 }
 
 body {
+  margin: 0;
   display: flex;
   justify-content: center;
   background-color: #eee;
 }
 
-.svg-root {
+#svg-root {
   max-width: 1500px;
+  opacity: 0;
 }
 
 @keyframes draw {
